--- a/account/pom.xml
+++ b/account/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.banking</groupId>
 	<artifactId>account</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 	<name>account</name>
 	<description>Learning microservice in springboot</description>
 	<url/>
