--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -79,12 +79,13 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.6</version>
                 <configuration>
-                    <image>
-                        <name>rohan7351/${project.artifactId}:V1</name>
-                    </image>
+                    <to>
+                        <image>rohan7351/${project.artifactId}:V1</image>
+                    </to>
                 </configuration>
             </plugin>
         </plugins>
