--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -20,7 +20,14 @@ spring:
 build:
   version: "1.0"
 
-
+accounts:
+  message: "Welcome to DummyBank accounts related local APIs "
+  contactDetails:
+    name: "Rohan Rana - Developer"
+    email: "rohan@dev.com"
+  onCallSupport:
+    - (555) 555-1234
+    - (555) 523-1345
 
 
 
