--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  profiles:
+    active:
+      - "qa"
+#      -  "prod"
 
 build:
   version: "1.0"
