--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -14,3 +14,17 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  profiles:
+    active: "qa"
+
+build:
+  version: "2.0"
+
+accounts:
+  message: "Welcome to DummyBank accounts related QA APIs "
+  contactDetails:
+    name: "Vijay Raj  - Senior Developer"
+    email: "vijay.hsc@dev.com"
+  onCallSupport:
+    - (222) 235-1243
+    - (222) 223-1367
