--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -14,3 +14,19 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  profiles:
+    active:
+      - "qa"
+#      -  "prod"
+
+build:
+  version: "1.0"
+
+accounts:
+  message: "Welcome to DummyBank accounts related local APIs "
+  contactDetails:
+    name: "Rohan Rana - Developer"
+    email: "rohan@dev.com"
+  onCallSupport:
+    - (555) 555-1234
+    - (555) 523-1345
