--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 9000
 spring:
+  application:
+    name: "cards"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -14,19 +18,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-  profiles:
-    active:
-      - "qa"
-#      -  "prod"
+  config:
+    import: "optional:configserver:http://localhost:8071/"
 
-build:
-  version: "1.0"
 
-accounts:
-  message: "Welcome to DummyBank cards related local APIs "
-  contactDetails:
-    name: "Rohan Rana - Developer"
-    email: "rohan@dev.com"
-  onCallSupport:
-    - (555) 555-1234
-    - (555) 523-1345
+
+
+
