--- a/configserver/src/main/resources/application.yaml
+++ b/configserver/src/main/resources/application.yaml
@@ -2,13 +2,20 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: native
+    active: git
   cloud:
     config:
       server:
-        native:
+        git:
 #          search-locations: "classpath://config"
-          search-locations: "file:///C://Users//rohan//OneDrive//Desktop//Microservice Lerning V2//configserver//src//main//resources//config"
+#          search-locations: "file:///C://Users//rohan//OneDrive//Desktop//Microservice Lerning V2//configserver//src//main//resources//config"
+          uri: "https://github.com/Rohan7351/microservice-config"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
+
+
 
 server:
   port: 8071
