--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -72,6 +72,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.6</version>
+                <configuration>
+                    <to>
+                        <image>rohan7351/${project.artifactId}:V1</image>
+                    </to>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
