--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -23,5 +23,26 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      access: unrestricted
+  info:
+    env:
+      enabled: true
 
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "account"
+    description: "Banking Accounts Application"
+    version: "1.0.0"
 
