--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       service: microservice-db-config
 
   configserver:
-    image: "rohan7351/configserver:V2"
+    image: "rohan7351/configserver:V3"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -44,8 +44,28 @@ services:
       file: common-cofig.yml
       service: microservice-base-config
 
+  eurekaserver:
+    image: "rohan7351/eurekaserver:V3"
+    container_name: eurekaserver-ms
+    ports:
+      - "8070:8070"
+    depends_on:
+      configserver:
+        condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: common-cofig.yml
+      service: microservice-configserver-config
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
+
   accounts:
-    image: "rohan7351/account:V2"
+    image: "rohan7351/account:V3"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -54,15 +74,17 @@ services:
         condition: service_healthy
       accountsdb:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "account"
       SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
     extends:
       file: common-cofig.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
   loans:
-    image: "rohan7351/loans:V2"
+    image: "rohan7351/loans:V3"
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -71,15 +93,17 @@ services:
         condition: service_healthy
       loansdb:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
       SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
     extends:
       file: common-cofig.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 
   cards:
-    image: "rohan7351/cards:V2"
+    image: "rohan7351/cards:V3"
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -88,12 +112,14 @@ services:
         condition: service_healthy
       cardsdb:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
       SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
     extends:
       file: common-cofig.yml
-      service: microservice-configserver-config
+      service: microservice-eurekaserver-config
 networks:
   rohanbank:
     driver: "bridge"
