Implementing Cross cutting concerns Tracing & Logging using Gateway

--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -46,3 +46,9 @@ info:
     description: "Banking Accounts Application"
     version: "1.0.0"
 
+logging:
+  level:
+    com:
+      banking:
+        account: DEBUG
+
