--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -44,3 +44,9 @@ info:
     description: "Banking Cards Application"
     version: "1.0.0"
 
+logging:
+  level:
+    com:
+      eazybytes:
+        cards: DEBUG
+
