--- a/gatewayserver/src/main/resources/application.yaml
+++ b/gatewayserver/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
         webflux:
           discovery:
             locator:
-              enabled: true
+              enabled: false
               lower-case-service-id: true
 
 management:
@@ -33,5 +33,5 @@ info:
 logging:
   level:
     com:
-      eazybytes:
+      banking:
         gatewayserver: DEBUG
