--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -43,3 +43,9 @@ info:
     name: "loans"
     description: "Banking Loans Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      eazybytes:
+        loans: DEBUG
