--- a/gatewayserver/pom.xml
+++ b/gatewayserver/pom.xml
@@ -77,7 +77,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.6</version>
+                <configuration>
+                    <to>
+                        <image>rohan7351/${project.artifactId}:V4</image>
+                    </to>
+                </configuration>
+            </plugin>
 		</plugins>
+
 	</build>
 
 </project>
