--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       service: microservice-db-config
 
   configserver:
-    image: "rohan7351/configserver:V3"
+    image: "rohan7351/configserver:V4"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -45,7 +45,7 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-      image: "rohan7351/eurekaserver:V3"
+      image: "rohan7351/eurekaserver:V4"
       container_name: eurekaserver-ms
       ports:
         - "8070:8070"
@@ -65,10 +65,16 @@ services:
         SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-    image: "rohan7351/account:V3"
+    image: "rohan7351/account:V4"
     container_name: accounts-ms
     ports:
       - "8080:8080"
+    healthcheck:
+      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     depends_on:
       configserver:
         condition: service_healthy
@@ -84,10 +90,16 @@ services:
       service: microservice-eurekaserver-config
 
   loans:
-    image: "rohan7351/loans:V3"
+    image: "rohan7351/loans:V4"
     container_name: loans-ms
     ports:
       - "8090:8090"
+    healthcheck:
+      test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     depends_on:
       configserver:
         condition: service_healthy
@@ -102,11 +114,18 @@ services:
       file: common-cofig.yml
       service: microservice-eurekaserver-config
 
+
   cards:
-    image: "rohan7351/cards:V3"
+    image: "rohan7351/cards:V4"
     container_name: cards-ms
     ports:
       - "9000:9000"
+    healthcheck:
+      test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     depends_on:
       configserver:
         condition: service_healthy
@@ -117,6 +136,26 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "cards"
       SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
+    extends:
+      file: common-cofig.yml
+      service: microservice-eurekaserver-config
+
+
+
+  gatewayserver:
+    image: "rohan7351/gatewayserver:V4"
+    container_name: gatewayserver-ms
+    ports:
+      - "8072:8072"
+    depends_on:
+      accounts:
+        condition: service_healthy
+      loans:
+        condition: service_healthy
+      cards:
+        condition: service_healthy
+    environment:
+      SPRING_APPLICATION_NAME: "gatewayserver"
     extends:
       file: common-cofig.yml
       service: microservice-eurekaserver-config
