--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      timeout: 10s
+      retries: 10
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   accountsdb:
     container_name: accountsdb
     ports:
@@ -6,7 +18,7 @@ services:
     environment:
       MYSQL_DATABASE: accountsdb
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-db-config
 
   loansdb:
@@ -16,7 +28,7 @@ services:
     environment:
       MYSQL_DATABASE: loansdb
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-db-config
 
   cardsdb:
@@ -26,11 +38,11 @@ services:
     environment:
       MYSQL_DATABASE: cardsdb
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-db-config
 
   configserver:
-    image: "rohan7351/configserver:V4"
+    image: "rohan7351/configserver:V5"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -41,11 +53,11 @@ services:
       retries: 10
       start_period: 10s
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-base-config
 
   eurekaserver:
-    image: "rohan7351/eurekaserver:V4"
+    image: "rohan7351/eurekaserver:V5"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -59,13 +71,13 @@ services:
       retries: 10
       start_period: 10s
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-configserver-config
     environment:
       SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-    image: "rohan7351/account:V4"
+    image: "rohan7351/account:V5"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -86,11 +98,11 @@ services:
       SPRING_APPLICATION_NAME: "account"
       SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-eurekaserver-config
 
   loans:
-    image: "rohan7351/loans:V4"
+    image: "rohan7351/loans:V5"
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -111,12 +123,12 @@ services:
       SPRING_APPLICATION_NAME: "loans"
       SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-eurekaserver-config
 
 
   cards:
-    image: "rohan7351/cards:V4"
+    image: "rohan7351/cards:V5"
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -137,13 +149,11 @@ services:
       SPRING_APPLICATION_NAME: "cards"
       SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-eurekaserver-config
 
-
-
   gatewayserver:
-    image: "rohan7351/gatewayserver:V4"
+    image: "rohan7351/gatewayserver:V5"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
@@ -154,11 +164,18 @@ services:
         condition: service_healthy
       cards:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
+      SPRING_DATA_REDIS_CONNECT-TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
     extends:
-      file: common-cofig.yml
+      file: common-config.yml
       service: microservice-eurekaserver-config
+
 networks:
   rohanbank:
     driver: "bridge"
