--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -1,17 +1,6 @@
 services:
-  redis:
-    image: redis
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
-      timeout: 10s
-      retries: 10
-    extends:
-      file: common-config.yml
-      service: network-deploy-service
   read:
-    image: grafana/loki:latest
+    image: grafana/loki:3.6.2
     command: "-config.file=/etc/loki/config.yaml -target=read"
     ports:
       - 3101:3100
@@ -32,7 +21,7 @@ services:
           - loki
 
   write:
-    image: grafana/loki:latest
+    image: grafana/loki:3.6.2
     command: "-config.file=/etc/loki/config.yaml -target=write"
     ports:
       - 3102:3100
@@ -51,7 +40,7 @@ services:
       <<: *loki-dns
 
   alloy:
-    image: grafana/alloy:latest
+    image: grafana/alloy:v1.12.0
     volumes:
       - ../observability/alloy/alloy-local-config.yaml:/etc/alloy/config.alloy:ro
       - /var/run/docker.sock:/var/run/docker.sock
@@ -65,7 +54,7 @@ services:
       service: network-deploy-service
 
   minio:
-    image: minio/minio
+    image: minio/minio:RELEASE.2025-09-07T16-13-09Z
     entrypoint:
       - sh
       - -euc
@@ -91,6 +80,29 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
+#  prometheus:
+#    image: prom/prometheus:v3.8.0
+#    container_name: prometheus
+#    ports:
+#      - "9090:9090"
+#    volumes:
+#      - ../observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+#    extends:
+#      file: common-config.yml
+#      service: network-deploy-service
+
+#  tempo:
+#    image: grafana/tempo:2.9.0
+#    container_name: tempo
+#    command: -config.file /etc/tempo-config.yml
+#    ports:
+#      - "3110:3100"
+#      - "4318:4318"
+#    volumes:
+#      - ../observability/tempo/tempo.yml:/etc/tempo-config.yml
+#    extends:
+#      file: common-config.yml
+#      service: network-deploy-service
 
   grafana:
     image: grafana/grafana:latest
@@ -129,11 +141,10 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
-
   backend:
-    image: grafana/loki:latest
+    image: grafana/loki:3.6.2
     volumes:
-      - ./loki-config.yaml:/etc/loki/config.yaml
+      - ../observability/loki/loki-config.yaml:/etc/loki/config.yaml
     ports:
       - "3100"
       - "7946"
@@ -145,7 +156,7 @@ services:
       service: network-deploy-service
 
   gateway:
-    image: nginx:latest
+    image: nginx:1.29.3
     depends_on:
       - read
       - write
@@ -367,14 +378,8 @@ services:
         condition: service_healthy
       cards:
         condition: service_healthy
-      redis:
-        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
-      SPRING_DATA_REDIS_CONNECT-TIMEOUT: 2s
-      SPRING_DATA_REDIS_HOST: redis
-      SPRING_DATA_REDIS_PORT: 6379
-      SPRING_DATA_REDIS_TIMEOUT: 1s
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
