Set up micrometer and prometheus in services

--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -41,6 +41,10 @@ management:
   info:
     env:
       enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
 
 
 eureka:
