--- a/docker-compose/prod/common-config.yml
+++ b/docker-compose/prod/common-config.yml
@@ -1,42 +1,47 @@
 services:
-  network-deploy-service:
-    networks:
-      - rohanbank
+   network-deploy-service:
+     networks:
+       - rohanbank
 
-  microservice-db-config:
-    extends:
-      service: network-deploy-service
-    image: mysql
-    healthcheck:
-      test: [ "CMD","mysqladmin","ping","-h","localhost" ]
-      timeout: 10s
-      retries: 10
-      interval: 10s
-      start_period: 10s
-    environment:
-      MYSQL_ROOT_PASSWORD: root
+#   microservice-db-config:
+#     extends:
+#       service: network-deploy-service
+#     image: mysql
+#     healthcheck:
+#       test: [ "CMD","mysqladmin","ping","-h","localhost" ]
+#       timeout: 10s
+#       retries: 10
+#       interval: 10s
+#       start_period: 10s
+#     environment:
+#       MYSQL_ROOT_PASSWORD: root
 
-  microservice-base-config:
-    extends:
-      service: network-deploy-service
-    deploy:
-      resources:
-        limits:
-          memory: 700m
+   microservice-base-config:
+     extends:
+       service: network-deploy-service
+     deploy:
+       resources:
+         limits:
+           memory: 700m
+     environment:
+       JAVA_TOOL_OPTIONS: "-javaagent:/app/libs/opentelemetry-javaagent-2.22.0.jar"
+       OTEL_EXPORTER_OTLP_ENDPOINT: http://tempo:4318
+       OTEL_METRICS_EXPORTER: none
+       OTEL_LOGS_EXPORTER: none
 
 
 
-  microservice-configserver-config:
-    extends:
-      service: microservice-base-config
-    environment:
-      SPRING_PROFILES_ACTIVE: prod
-      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: accountsdb
+   microservice-configserver-config:
+     extends:
+       service: microservice-base-config
+     environment:
+       SPRING_PROFILES_ACTIVE: prod
+       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+#       MYSQL_ROOT_PASSWORD: root
+#       MYSQL_DATABASE: accountsdb
 
-  microservice-eurekaserver-config:
-    extends:
-      service: microservice-configserver-config
-    environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+   microservice-eurekaserver-config:
+     extends:
+       service: microservice-configserver-config
+     environment:
+       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
