--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -6,15 +6,28 @@ spring:
   profiles:
     active: "prod"
 
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/accountsdb
+#    username: root
+#    password: root
+#  jpa:
+#    show-sql: true
+#  sql:
+#    init:
+#      mode: always
   datasource:
-    url: jdbc:mysql://localhost:3306/accountsdb
-    username: root
-    password: root
-  jpa:
-    show-sql: true
-  sql:
-    init:
-      mode: always
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+    h2:
+      console:
+        enabled: true
+    jpa:
+      database-platform: org.hibernate.dialect.H2Dialect
+      hibernate:
+        ddl-auto: update
+      show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071/"
   cloud:
@@ -67,6 +80,8 @@ logging:
     com:
       banking:
         account: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
 resilience4j.circuitbreaker:
   configs:
