--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -5,15 +5,28 @@ spring:
     name: "cards"
   profiles:
     active: "prod"
+#  datasource:
+#    url: jdbc:mysql://localhost:3308/cardsdb
+#    username: root
+#    password: root
+#  jpa:
+#    show-sql: true
+#  sql:
+#    init:
+#      mode: always
   datasource:
-    url: jdbc:mysql://localhost:3308/cardsdb
-    username: root
-    password: root
-  jpa:
-    show-sql: true
-  sql:
-    init:
-      mode: always
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+    h2:
+      console:
+        enabled: true
+    jpa:
+      database-platform: org.hibernate.dialect.H2Dialect
+      hibernate:
+        ddl-auto: update
+      show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071/"
 
@@ -60,4 +73,6 @@ logging:
     com:
       eazybytes:
         cards: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
