Setting up docker compose file for security.

--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.4.7
+    container_name: keycloak
+    ports:
+      - "127.0.0.1:7080:8080"
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: "admin"
+      KC_BOOTSTRAP_ADMIN_PASSWORD: "admin"
+    command: "start-dev"
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   read:
     image: grafana/loki:3.6.2
     command: "-config.file=/etc/loki/config.yaml -target=read"
@@ -245,7 +258,7 @@ services:
 #      service: microservice-db-config
 
   configserver:
-    image: "rohan7351/configserver:V6"
+    image: "rohan7351/configserver:V7"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -263,7 +276,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "rohan7351/eurekaserver:V6"
+    image: "rohan7351/eurekaserver:V7"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -284,10 +297,8 @@ services:
       OTEL_SERVICE_NAME: "eurekaserver"
 
   accounts:
-    image: "rohan7351/account:V6"
+    image: "rohan7351/account:V7"
     container_name: accounts-ms
-    ports:
-      - "8080:8080"
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
       interval: 20s
@@ -310,10 +321,8 @@ services:
       service: microservice-eurekaserver-config
 
   loans:
-    image: "rohan7351/loans:V6"
+    image: "rohan7351/loans:V7"
     container_name: loans-ms
-    ports:
-      - "8090:8090"
     healthcheck:
       test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -337,10 +346,8 @@ services:
 
 
   cards:
-    image: "rohan7351/cards:V6"
+    image: "rohan7351/cards:V7"
     container_name: cards-ms
-    ports:
-      - "9000:9000"
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -363,7 +370,7 @@ services:
       service: microservice-eurekaserver-config
 
   gatewayserver:
-    image: "rohan7351/gatewayserver:V6"
+    image: "rohan7351/gatewayserver:V7"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
@@ -377,6 +384,7 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
       OTEL_SERVICE_NAME: "gatewayserver"
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:8080/realms/master/protocol/openid-connect/certs"
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
