--- a/account/pom.xml
+++ b/account/pom.xml
@@ -84,6 +84,22 @@
             <version>2.8.13</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit-stream</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
@@ -126,7 +142,7 @@
                 <version>3.4.6</version>
                 <configuration>
                     <to>
-                        <image>rohan7351/${project.artifactId}:V7</image>
+                        <image>rohan7351/${project.artifactId}:V8</image>
                     </to>
                 </configuration>
             </plugin>
