--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -34,6 +34,22 @@ spring:
     openfeign:
       circuitbreaker:
         enabled: true
+    function:
+      definition: updateCommunication
+    stream:
+      bindings:
+        updateCommunication-in-0:
+          destination: communication-sent
+          group: ${spring.application.name}
+        sendCommunication-out-0:
+          destination: send-communication
+      rabbitmq:
+        host: localhost
+        port: 5672
+        username: guest
+        password: guest
+        connection-timeout: 10s
+
   security:
     oauth2:
       resourceserver:
@@ -62,8 +78,6 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
-
-
 
 eureka:
   instance:
